color contrast fixes

--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -55,6 +55,7 @@
         right: 25px;
         background-color: rgba(255, 0, 0, 0.85);
         color: white;
+        text-shadow: 2px 2px 4px black;
         padding: 10px;
         margin: 0;
     }
